# ModPerl-API

./: .gitignore  ChangeLog  INSTALL-FILES  Makefile.am  README-BUILD.md  README-INSTALL.md  README.md  bootstrap  build-aws  build-local  buildspec.yml  configure.ac  create-database.pl  init-bedrock-api  requires
alb/: Makefile.inc
app-service/: Makefile.inc
autoscaling/: Makefile.inc
autotools/: ax_requirements_check.m4
cloudmap/: Makefile.inc
cloudwatch-logs/: Makefile.inc
config/: Makefile.am  Makefile.inc  apache2.conf  api-vhost.conf  api.conf.in  api.xml.in  mysql-session.xml.in
docker/: Dockerfile  Makefile.inc  docker-compose.yml  start-server
ecr/: Makefile.inc
iam-policies/: Makefile.inc  ecs-task-trust-policy.json
lib/Bedrock/Apache/: API.pm.in  APIArgs.pm.in  ExampleAPI.pm.in  ExampleHandler.pm.in
lib/Bedrock/Apache/API/: Args.pm.in  Handler.pm.in  Routes.pm.in
mysql-service/: Makefile.inc
route53/: Makefile.inc
secrets/: Makefile.inc
source/: Makefile.inc
state/: alb-dns.json  aws-secret-api-key.json  aws-secret-mysql-password.json  ecr-repo.json  ecs-task-execution-role.json  image.json  listener-arn.json  listener-rule-arn.json  listener-rule.json  load-balancer-arn.json  log-group.json  mysql-local-registry-arn.json  mysql-service.json  mysql-task-definition.json  mysql-update-service.json  mysql-vpc-configuration.json  policy-configuration.json  resource-record-set  resource-record-set.json  scalable-target  scaling-policy.json  secrets-policy.json  service-discovery-operation.json  service-discovery.json  service.json  target-group.json  task-definition.json  update-route53  update-service.json  vpc-configuration.json  web-local-registry-arn.json
t/: 00-bedrock-apache-api.t
templates/: debian.env.in  listener-actions.json.in  mysql-task-definition.json.in  mysql-vpc-configuration.json.in  policy-configuration.json.in  resource-record-set.json.in  secrets-policy.json.in  setup.sql.in  task-definition.json.in
